--- a/index.css
+++ b/index.css
@@ -68,3 +68,21 @@ label span {
 
 .warn {color: red;}
 
+.bookmarklet {
+  display: inline-block;
+  padding: 8px 12px;
+  font-size: 0.9em;
+  text-align: center;
+  text-decoration: none;
+  color: #000;
+  background-color: #ccc;
+  border: 1px solid transparent;
+  border-radius: 3px;
+  max-width: 400px;
+}
+
+.bookmarklet:hover {
+  background-color: #fff;
+  border-color: #fff;
+}
+
